--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,9 +280,8 @@ tr:hover .options{
     z-index: 3;
     text-decoration: none;
     color: white;
-    padding: 1px 3px;
-    border-radius: 50%;
-    background-color: black;
+    padding: 0px 3px;
+    background-color: #303945;
 }
 .img-preview:hover a{
     visibility: visible;
@@ -295,4 +294,127 @@ tr:hover .options{
     background-color: rgba(255, 255, 255, 0.26);
     position: absolute;
     z-index: 2;
+}
+
+
+/* Website homepage*/
+
+.homepage-section-1{
+    margin-top: 60px;
+}
+.homepage-section-1 .carousel .carousel-inner{
+    width: 100%;
+    height: 70vh;
+    position: relative;
+
+}
+.homepage-section-1 .carousel .carousel-caption{
+    color: white;
+}
+
+.homepage-section-1 .carousel .carousel-inner::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 255, 0.479);
+    z-index: 1;
+}
+.homepage-section-1  .carousel img{
+    width: 100%;
+    height: 80vh;
+}
+.carousel-caption{
+    color: black;
+}
+
+/* Homepage causes*/
+
+.progressbar{
+    width: 100%;
+    height: 10px;
+    background-color: darkgrey;
+    position: relative;
+    border-radius: 20px;
+}
+.progressbar span {
+    height: 100%;
+    background-color: blue;
+    position: absolute;
+    border-radius: 20px;
+}
+.donation-progress h6{
+    list-style: 10px;
+}
+
+/*Homepage our values*/
+.our-values{
+    text-align: center;
+    background-image: url('https://images.unsplash.com/photo-1505455184862-554165e5f6ba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=869&q=80');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+.our-values::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 255, 0.534);
+    z-index: 0;
+    left: 0;
+    bottom: 0;
+}
+.our-values .value{
+    background-color: white;
+    transition: 0.4s;
+}
+
+.our-values .value i{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: blue;
+    color: white;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    transition: 0.4s;
+}
+.our-values .value:hover{
+    background-color: blue;
+    color: white;
+}
+.our-values .value:hover i{
+    background-color: white;
+    color: blue;
+}
+
+/* website footer*/
+
+
+.footer-section-1{
+    background-color: rgb(49, 49, 231);
+    color: white;
+}
+.footer-section-1 ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.footer-section-1 h3{
+    font-weight: 600;
+}
+
+.footer-section-1 ul li {
+    padding: 2px 2px;
+}
+
+.footer-section-1 ul li a{
+    color: white;
+    text-decoration: none;
+}
+.footer-section-2 .icons{
+    font-size: 20px;
 }
